# eso-api-wrapper

./: .gitignore  .pylintrc  README.md  TODO.md  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py
.github/workflows/: pylint.yml  python-app.yml
eso/: eso_api.py
eso_api/: __init__.py
eso_api/api/: __init__.py  call.py  errors.py  eso.py  eso_api.py
eso_api/config/: __init__.py  config.py  headers.py
responses/: test.json
test/: test_errors.py  test_eso.py  test_headers.py
