[tool.poetry]
name = "eso"
version = "0.1.0"
description = "Wrapper for eso.lt api"
authors = ["Linas Kulbaciauskas"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
django = "^5.0.7"
djangorestframework = "^3.15.2"
markdown = "^3.6"
django-filter = "^24.2"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
