[tool.poetry]
name = "eso_api"
version = "0.1.0"
description = "Wrapper for eso.lt api"
authors = ["Linas Kulbaciauskas"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
markdown = "^3.6"
black = "^24.4.2"
pydantic = "^2.8.2"
pytest = "^8.2.2"
requests-mock = "^1.12.1"
pylint = "^3.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "eso_api" }
]
